# treatment_planning

./: .gitignore  Dockerfile  README.md  TODO  TODO.md  docker-compose.yml  environment.yml  package-lock.json  pyproject.toml  streamlit_app.py  treatment_planning.py
core/: config.py  storage.py  utils.py
core/classification/: bert_classifier.py  claude_classifier.py  dataset.py  evaluator.py  text_cnn.py  trainer.py
core/extraction/: extraction_utils.py
core/ingestion/: __init__.py  graph_ingest.py  pdf_ingest.py
core/rag/: generator.py  kb_indexer.py  pipeline.py  rag_coder.py  retriever.py  text_retriever.py
core/storage/: __init__.py  graph_storage.py
core/thematic/: coder.py  report.py  themes.py
core/ui/: sidebar.py
pages/: 1_Document_Upload_and_Ingest.py  2_Text_RAG.py  3_Graph_RAG.py  4_Difference_Checker.py  5_Text_Classification.py  5_Thematic_Analysis.py  6_Claude_Classification.py  7_RAG_Coder.py
server/: Dockerfile  indexed_files.json  pyproject.toml
server/core/: admin.py  models.py  serializers.py  utils.py
server/core/api/: serializers.py  urls.py  views.py
server/core/ingestion/: admin.py  chunking.py  embeddings.py  graph.py  loaders.py  ocr.py
server/core/management/commands/: extract_rename_move_to_uploads.py  ingest_statewise_kg.py  repopulate_upload_data.py
server/core/migrations/: 0001_initial.py  0002_waiverdocument_alter_chunk_document_and_more.py  0003_remove_waiverdocument_group_and_more.py
server/core/rag/: generator.py  pipeline.py  retrieval.py  retriever.py
server/core/test/: test_rag_pipeline.py
server/server/: settings.py  urls.py
web/: Dockerfile  TODO  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: AnswerPane.tsx  AskBox.tsx  FileUpload.tsx  GraphView.tsx  PlanVisualizer.tsx  QueryToolbar.tsx  SourceList.tsx  WaiverTable.tsx
