[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodalrag"
version = "0.1.0"
description = "Local Streamlit app for policy analysis with RAG and GraphRAG"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24",
    "neo4j~=5.28",
    "pandas>=2.2",
    "openpyxl>=3.1.5",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "lancedb>=0.26.0",
    "langchain-community>=0.4.1",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langgraph>=1.0.5",
    "streamlit>=1.38",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
