[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodalrag"
version = "0.1.0"
description = "Django REST backend for multimodal RAG with Neo4j and more"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "pydantic>=2.8",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10.4",
    "tqdm>=4.66",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0",
    "PyMuPDF>=1.24",
    "regex>=2024.7.24",
    "python-magic>=0.4.27",
    "neo4j~=5.28",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "transformers>=4.44",
    "tokenizers>=0.19",
    "fits>=0.0.1",
    "openpyxl>=3.1.5",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "lancedb>=0.26.0",
    "langchain-community>=0.4.1",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langgraph>=1.0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
